crates/sui-graphql-macros/tests/compile/schema_validation_field_not_found.rs
use sui_graphql_macros::Response;

#[derive(Response)]
#[response(schema = "tests/test_schema.graphql")]
struct InvalidField {
    #[field(path = "object.nonExistent")]
    address: String,
}

fn main() {}
